fix(manage-reviews): address text overflow issue in review container

--- a/react-vite/src/components/ManageReviews/ManageReviews.css
+++ b/react-vite/src/components/ManageReviews/ManageReviews.css
@@ -2,6 +2,20 @@
   padding: 20px;
 }
 
+.manage-review-container .review-container-right {
+  width: 80%;
+
+}
+
+.review-container-right {
+  overflow: hidden;
+}
+
+.review-container-right p {
+  word-wrap: break-word;
+
+}
+
 .manage-review-container {
   display: flex;
   justify-content: space-between;
